--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 
     <!-- BEGIN: Tailwind -->
-    <script src="https://cdn.tailwindcss.com?plugins=aspect-ratio,line-clamp"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=aspect-ratio,line-clamp,typography"></script>
+    <style type="text/tailwindcss">
+      article .prose a {
+        @apply text-blue-500 hover:text-blue-600;
+      }
+
+      article .prose img {
+        @apply h-44 w-auto;
+      }
+    </style>
     <!-- END: Tailwind -->
 
     <!-- BEGIN: MarkedJS -->
@@ -131,6 +140,18 @@
               this.subredditItems = data.data.children;
               this.subredditLoaded = true;
             });
+        },
+
+        formatComment(comment) {
+          let content = marked.parse(filterXSS(comment));
+
+          // Replace giphy links.
+          content = content.replace(/giphy%7C(.*)(|%7C\|.*)?"/g, (match) => {
+            let id = match.split("%7C")[1];
+            return `https://media.giphy.com/media/${id}/giphy.gif"`;
+          });
+
+          return content;
         },
       });
     </script>
@@ -727,8 +748,9 @@
                               class="text-sm text-gray-700"
                               x-text="'u/' + comment.data.author"
                             ></h3>
-                            <p class="text-sm"
-                            x-html="marked.parse(filterXSS(comment.data.body))"
+                            <p
+                              class="text-sm prose text-black"
+                              x-html="formatComment(comment.data.body)"
                             />
                           </div>
                         </div>
